
syntax = "proto3";

package store;

service StoreService {
  rpc AuthenticateMerchant (AuthRequest) returns (AuthResponse);
  rpc GetMerchantDetailsById (MerchantDetailsRequest) returns (MerchantDetailsResponse);
  rpc GetDeliveryDetailsById (DeliveryDetailsRequest) returns (DeliveryDetailsResponse);
  rpc GetDeviceDetailsByStoreId (DeviceDetailsRequest) returns (DeviceDetailsResponse);
}

message AuthRequest {
  string token = 1;        
  string traceId = 2;      
  string spanId = 3;       
}

message AuthResponse {
  bool success = 1;         
  string message = 2;      
  MerchantData merchantData = 3; 
  bool isValid = 4;    
}

message MerchantDetailsRequest {
  string merchantId = 1;  
  string traceId = 2;       
  string spanId = 3;        
}


message MerchantDetailsResponse {
  bool success = 1;         
  string message = 2;       
  MerchantData merchantData = 3;  
  string traceId = 4;   
  string spanId = 5;        
}

message MerchantData {
  string _id = 1;         
  string name = 2;          
  string mobile = 3;       
  string email = 4;       
  string address = 5;       
  string imgUrl = 6;        
  bool isOpen = 7;        
  bool scheduledOrder = 8; 
  bool freeDelivery = 9;   
  string pincode = 10;     
  string landmark = 11;     
  Location location = 12;   
  repeated StoreTiming timings = 13; 
  string packingCharges = 14; 
  repeated string deliveryTypes = 15; 
  string gstNumber = 16; 
  string area = 18;         
  string city = 19;        
  string state = 20;       
  string country = 21;     
  string vendorId = 22;     
  bool negotiation = 23;  
  bool exchange = 24;      
  bool isActive = 25;       
}


message StoreTiming {
  string day = 1;                  
  repeated StoreTimingSlot slots = 2;  
}

message StoreTimingSlot {
  string openingTime = 1;  
  string closingTime = 2;   
  bool isOpen = 3;          
}


message Location {
  string type = 1;                
  repeated double coordinates = 2; 
}


message DeliveryDetailsRequest {
  string deliveryId = 1;
  string traceId = 2;
  string spanId = 3;
}

message DeliveryDetailsResponse {
  bool success = 1;
  string message = 2;
  DeliveryData deliveryData = 3;
  string traceId = 4;
  string spanId = 5;
}

message DeliveryData {
  string _id = 1;
  string name = 2;
  bool isActive = 3;
  string createdAt = 4;
  string updatedAt = 5;
}


message DeviceDetailsRequest {
  string storeId = 1;  
  string traceId = 2; 
  string spanId = 3;   
}

message DeviceDetailsResponse {
  bool success = 1;   
  string message = 2;  
  string deviceId = 3; 
  string traceId = 4;  
  string spanId = 5;   
}